Fix: Add missing 'for' attributes to labels (Accessibility)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="input-row-grid">
                     <div class="floating-input-group">
-                        <label>Preset</label>
+                        <label for="dist-preset">Preset</label>
                         <select id="dist-preset" class="modern-input">
                             <option value="custom">Custom</option>
                             <option value="3000">3000m</option>
@@ -72,15 +72,15 @@
                         </select>
                     </div>
                     <div class="floating-input-group">
-                        <label>Distance (m)</label>
+                        <label for="distance">Distance (m)</label>
                         <input type="number" id="distance" value="2955" placeholder="e.g. 5000" class="modern-input">
                     </div>
                     <div class="floating-input-group">
-                        <label>Time (MM:SS)</label>
+                        <label for="time">Time (MM:SS)</label>
                         <input type="text" id="time" value="11:16" placeholder="MM:SS" class="modern-input">
                     </div>
                     <div class="floating-input-group">
-                        <label>Pace (/km)</label>
+                        <label for="input-pace">Pace (/km)</label>
                         <input type="text" id="input-pace" placeholder="MM:SS" class="modern-input">
                     </div>
                 </div>
@@ -96,12 +96,12 @@
                 </div>
                 <div class="input-row-grid cols-2">
                     <div class="floating-input-group">
-                        <label>Temperature (°C)</label>
+                        <label for="temp">Temperature (°C)</label>
                         <input type="number" id="temp" placeholder="Temp" title="Temperature in Celsius"
                             class="modern-input">
                     </div>
                     <div class="floating-input-group">
-                        <label>Dew Point (°C)</label>
+                        <label for="dew">Dew Point (°C)</label>
                         <input type="number" id="dew" placeholder="Dew" title="Dew Point in Celsius"
                             class="modern-input">
                     </div>
