UI: Update VDOT Estimated Threshold Color

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             style="font-size:0.7em; opacity:0.7; font-weight:400;">(Click to Expand)</span></div>
                     <div class="vdot-sub">Based on 5k: <span id="pred-5k" style="color:#e6edf3;">--:--</span></div>
                     <div class="vdot-sub" style="margin-top:2px;">Threshold: <span id="vdot-threshold"
-                            style="color:#fbbf24; font-weight:700;">--:--/km</span></div>
+                            style="color:#e6edf3; font-weight:700;">--:--/km</span></div>
                 </div>
                 <div class="vdot-right" style="text-align:right;">
                     <div class="vdot-val" id="vdot-val">--</div>
