--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
 
         <div class="input-section" style="background:transparent; border:none; padding:0;">
             <!-- Time Trial Block -->
-            <div class="modern-input-card">
+            <div class="modern-input-card card-glow-border">
                 <div class="modern-label">
-                    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="12" cy="12" r="10"></circle>
                         <polyline points="12 6 12 12 16 14"></polyline>
                     </svg>
@@ -144,7 +145,9 @@
                                 style="color:#e6edf3; font-weight:700;">--:--/km</span></div>
                     </div>
                     <div class="vdot-right" style="text-align:right;">
-                        <div class="vdot-val" id="vdot-val">--</div>
+                        <hr class="divider-fade" style="width: 100px; margin: 5px 0 5px auto; opacity: 0.5;">
+                        <!-- Cosmetic Fader -->
+                        <div class="vdot-val text-gradient-primary" id="vdot-val">--</div>
                     </div>
                 </div>
                 <div id="vdot-details"
@@ -154,10 +157,13 @@
             </div>
 
             <!-- Weather Block (Moved Down) -->
-            <div class="modern-input-card">
+            <div class="modern-input-card card-glow-border">
                 <div class="modern-label">
-                    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M14 14.76V3.5a2.5 2.5 0 0 0-5 0v11.26a4.5 4.5 0 1 0 5 0z"></path>
+                    <svg width="15" height="15" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M17 16.974c4.375-1.074 4.375-7.79 0-8.863C15.875 3.097 9.125 3.097 8 8.11 3.625 9.184 3.625 15.9 8 16.974h9z">
+                        </path>
                     </svg>
                     Weather Conditions
                 </div>
